/*
 * Designed and developed by 2024 mshdabiola (lawal abiola)
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package com.mshdabiola.model.testtag

object LabelAppBarTestTags {
    const val APP_BAR_ROOT = "label_app_bar:root"
    const val NAVIGATION_ICON = "label_app_bar:navigation_icon"
    const val TITLE_TEXT = "label_app_bar:title_text"
    const val SEARCH_ICON_BUTTON = "label_app_bar:search_icon_button"
    const val MORE_OPTIONS_ICON_BUTTON = "label_app_bar:more_options_icon_button"
    const val OPTIONS_DROPDOWN_MENU = "label_app_bar:options_dropdown_menu"
    const val RENAME_LABEL_MENU_ITEM = "label_app_bar:rename_label_menu_item"
    const val DELETE_LABEL_MENU_ITEM = "label_app_bar:delete_label_menu_item"
}
